src/test/ui/async-await/suggest-missing-await-closure.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-missing-await-closure.rs:16:18
   |
LL |         take_u32(x)
   |                  ^ expected `u32`, found opaque type
   |
note: while checking the return type of the `async fn`
  --> $DIR/suggest-missing-await-closure.rs:8:24
   |
LL | async fn make_u32() -> u32 {
   |                        ^^^ checked the `Output` of this `async fn`, found opaque type
   = note:     expected type `u32`
           found opaque type `impl Future<Output = u32>`
help: consider `await`ing on the `Future`
   |
LL |         take_u32(x.await)
   |                   ++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
